--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Cobacoba",
+	"name": "ccrud",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -18,11 +18,14 @@
 		"redux": "^3.7.2",
 		"redux-logger": "^3.0.6",
 		"redux-promise-middleware": "^4.4.1",
-		"redux-thunk": "^2.2.0"
+		"redux-thunk": "^2.2.0",
+		"tcomb-form-native": "^0.6.11"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
+		"eslint": "^4.12.1",
+		"eslint-config-equimper": "^2.2.1",
 		"jest": "21.2.0",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
